--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.3.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.0"
